--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,32 @@
 @import '~bootstrap/scss/bootstrap';
 
+html, body, div#root {
+  width: 100vw;
+
+}
+.App{
+  width: 100%;
+}
+
+.App > header{
+  background-image: url('./Image/Header_Recipes.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top left;
+  width: 100vw;
+  height: 200px;
+  margin-bottom: 30px;
+  display: inline-block;
+  h1{
+    color: white;
+    font-size: 50px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 30px;
+  }
+}
+
 .row{
-  // gap: 15px;
-   justify-content: centesr;
+
 .list{
   display: flex;
   justify-content: center;
@@ -14,41 +38,34 @@
   flex-direction: column;
   align-items: center;
   margin: 0 auto;
-  .list-row-img{
-
-
-    img{
-      height: 150px;
-      width: 150px;
-      border-radius: 10px;
+    .list-row-img{
+      margin-bottom: 10px;
+      img{
+        height: 150px;
+        width: 150px;
+        border-radius: 10px;
+      }
+    }
+   .list-row-desc{
+      margin-left: 15px;
+      h5{
+       width: 150px;
+      }
     }
   }
-  .list-row-desc{
-    margin-left: 15px;
-    // overflow: hidden;
-    h5{
-      width: 150px;
-    }
-
+}
+}
+.field-group{
+  gap: 15px;
+}
+@media (max-width: 580px) {
+  .field-group{
+  margin: 0 50px;
   }
 }
-}
-}
-
-.App > header{
-  background-image: url('./Image/Header_Recipes.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 100vw;
-  height: 200px;
-  margin-bottom: 30px;
-  display: inline-block;
-  h1{
-    color: white;
-    font-size: 50px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 70px 657px;
-  }
+.btn-grp{
+  display: flex;
+  gap: 10px;
 }
 
 .edit-modal {
@@ -65,7 +82,7 @@
   .edit-form {
     flex: 1 1 auto;
     padding: 10px 20px;
-    margin: 10px;
+    margin: 20px;
     height: 100%;
     background-color: #282c34;
     display: flex;
@@ -78,16 +95,35 @@
 
 .ingred{
   display: flex;
-}
-
-.show-list-row-img{
-  margin-left: 40%;
-
-  img{
-    width: 200px;
-    height: 200px;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+  &__group{
+    display: flex;
+  &__measures {
+    flex: 0 0 auto;
+    ul>li{
+    list-style: none;
+    }
   }
-
+  &__list{
+    flex: 0 0 auto;
+  }
+}
+  &__img{
+    flex: 0 1 20%;
+    position: relative;
+    right: 10px;
+    margin: 10px 30px;
+    img{
+      width: 250px;
+      height: 250px;
+    }
+  }
+}
+@media (max-width: 540px){
+  .ingred{
+    flex-wrap: wrap;
+  }
 }
 
 .modal {
@@ -96,6 +132,7 @@
   background-color: #0000005f;
   .modal-dialog{
     max-width: 70%;
+    margin: 15px auto;
   }
 }
 
@@ -120,6 +157,12 @@
           height: 100px;
           width: 100px;
         }
+      }
+    }
+    @media (max-width: 576px){
+      &__head{
+        gap: 10px;
+        flex-wrap: wrap;
       }
     }
   }
